# images-scraper

./: LICENSE  README.md  files_sorting.py  pics_loader.py  pyproject.toml  requirements.txt  scrap_img.py
images_scraper/: images_scraper.py  pics_loader.py  pyproject.toml
