[tool.poetry]
name = "images-scraper"
version = "0.1.0"
description = ""
authors = ["heartmarshall <heartmarshall@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.67.0"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
